p3/confs/mravily-argo-cd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  label:
    app: web

---

apiVersion: v1
kind: Namespace
metadata:
  name: argocd
