p3/confs/mravily-argo-cd/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: parrot-s
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: parrot
  ports:
  - port: 80
    targetPort: 80
